--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,8 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
     maven { url = 'https://central.sonatype.com/repository/maven-snapshots/' }
+    maven { url = "https://mymaven.bylazar.com/releases" }
+
 }
 
 dependencies {
@@ -15,5 +17,7 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:11.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.pedropathing:ftc:2.1.0-SNAPSHOT'
+    implementation "com.bylazar:fullpanels:1.0.12"
+
 }
 
