--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -3,6 +3,8 @@ repositories {
     google() // Needed for androidx
     maven { url = 'https://central.sonatype.com/repository/maven-snapshots/' }
     maven { url = "https://mymaven.bylazar.com/releases" }
+    maven { url 'https://jitpack.io' }
+
 
 }
 
@@ -18,6 +20,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.pedropathing:ftc:2.1.0-SNAPSHOT'
     implementation "com.bylazar:fullpanels:1.0.12"
+    implementation 'com.pedropathing:telemetry:1.0.0'
+    implementation 'org.ftclib.ftclib:core:2.1.1' // core
+
+
 
 }
 
